--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <div class="card-container">
         <div class="card">
             <h1>Happy Teacher's Day!</h1>
-            <p>Dear Teacher, thank you for guiding and inspiring us every day. Your dedication and patience make learning beautiful!</p>
+            <p>Dear Sir Randy! thank you for guiding and inspiring us every day. Your dedication and patience make learning beautiful!</p>
             <button id="animateBtn">Celebrate 🎉</button>
         </div>
         <div class="confetti" id="confetti"></div>
@@ -19,3 +19,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
